--- a/index.html
+++ b/index.html
@@ -6,8 +6,17 @@
     <title>my simple website</title>
     <link rel="stylesheet" href="style/blog.css">
 </head>
-<body><div>  
-<h3>My first website</h3>
+<body>
+<div>  
+<h3>My first blog</h3>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum commodi, enim adipisci dicta magnam quis odio beatae iusto voluptate? Laborum quod repudiandae placeat praesentium rem, eos aperiam consequuntur magni dolore.</p>
+</div>
+<div>  
+<h3>My second blog</h3>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum commodi, enim adipisci dicta magnam quis odio beatae iusto voluptate? Laborum quod repudiandae placeat praesentium rem, eos aperiam consequuntur magni dolore.</p>
+</div>
+<div>  
+<h3>My third blog</h3>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum commodi, enim adipisci dicta magnam quis odio beatae iusto voluptate? Laborum quod repudiandae placeat praesentium rem, eos aperiam consequuntur magni dolore.</p>
 </div>
     
