--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
 <h3>My third blog</h3>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum commodi, enim adipisci dicta magnam quis odio beatae iusto voluptate? Laborum quod repudiandae placeat praesentium rem, eos aperiam consequuntur magni dolore.</p>
 </div>
+<div>
+    <h3>how to push incremental code</h3>
+    <ul>
+       <li>git add .</li>
+       <li>git commit -m"add a meaningful commit message</li>
+       <li>git push</li>
+    </ul>
+</div>
     
 </body>
 </html>
