added i love my city

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
        <li>git push</li>
     </ul>
 </div>
-    
+    <div>
+        <h3>i love my city</h3>
+        <img src="images/city.jpg" alt="">
+    </div>
 </body>
 </html>
